[metadata]
name = eidaqc
version = 0.0.1
author = Johanna Lehr, Klaus Stammler
author_email = author@example.com
description = Test data availability in Eida network
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = eidaqc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src